# src/swagger/swagger.json
@@ -1,29 +1,219 @@
 {
 	"openapi": "3.0.0",
 	"components": {
+		"examples": {},
+		"headers": {},
+		"parameters": {},
+		"requestBodies": {},
+		"responses": {},
 		"schemas": {
-			"SyncSuccess": {
-				"type": "object",
+			"LoginSuccess": {
 				"properties": {
-					"message": {
+					"token": {
 						"type": "string"
 					}
 				},
-				"example": {
-					"message": "Sync Success"
-				}
-			},
-			"Product": {
+				"required": [
+					"token"
+				],
 				"type": "object",
+				"additionalProperties": false
+			},
+			"ErrorResponse401": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"success": {
+						"type": "boolean",
+						"enum": [
+							false
+						],
+						"nullable": false
+					},
+					"details": {
+						"items": {},
+						"type": "array"
+					}
+				},
+				"required": [
+					"message",
+					"success"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ErrorResponse500": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"success": {
+						"type": "boolean",
+						"enum": [
+							false
+						],
+						"nullable": false
+					},
+					"details": {
+						"items": {},
+						"type": "array"
+					}
+				},
+				"required": [
+					"message",
+					"success"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LoginBody": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CreateOrderSuccess": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"orderId": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"message",
+					"orderId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"OrderItem": {
+				"properties": {
+					"product_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"quantity": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"product_id",
+					"quantity"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CreateOrder": {
+				"properties": {
+					"customer": {
+						"type": "string"
+					},
+					"total": {
+						"type": "number",
+						"format": "double"
+					},
+					"items": {
+						"items": {
+							"$ref": "#/components/schemas/OrderItem"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"customer",
+					"total",
+					"items"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"OrderItemDetails": {
+				"properties": {
+					"product_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"quantity": {
+						"type": "number",
+						"format": "double"
+					},
+					"product_name": {
+						"type": "string"
+					},
+					"product_price": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"product_id",
+					"quantity",
+					"product_name",
+					"product_price"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"OrderWithItems": {
 				"properties": {
 					"id": {
-						"type": "number"
+						"type": "number",
+						"format": "double"
+					},
+					"customer": {
+						"type": "string"
+					},
+					"total": {
+						"type": "number",
+						"format": "double"
+					},
+					"created_at": {
+						"type": "string"
+					},
+					"items": {
+						"items": {
+							"$ref": "#/components/schemas/OrderItemDetails"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"id",
+					"customer",
+					"total",
+					"created_at",
+					"items"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Product": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
 					},
 					"title": {
 						"type": "string"
 					},
 					"price": {
-						"type": "number"
+						"type": "number",
+						"format": "double"
 					},
 					"category": {
 						"type": "string"
@@ -35,179 +225,34 @@
 						"type": "string"
 					}
 				},
-				"example": {
-					"id": 1,
-					"title": "Pen",
-					"price": 5,
-					"category": "Paper",
-					"description": "Super Pen",
-					"image": "image.png"
-				}
-			},
-			"OrderWithItems": {
+				"required": [
+					"id",
+					"title",
+					"price",
+					"category",
+					"description",
+					"image"
+				],
 				"type": "object",
-				"properties": {
-					"id": {
-						"type": "number"
-					},
-					"customer": {
-						"type": "string"
-					},
-					"total": {
-						"type": "number"
-					},
-					"created_at": {
-						"type": "string"
-					},
-					"items": {
-						"type": "array",
-						"product_id": {
-							"type": "number"
-						},
-						"quantity": {
-							"type": "number"
-						},
-						"product_name": {
-							"type": "string"
-						},
-						"product_price": {
-							"type": "number"
-						}
-					}
-				},
-				"example": {
-					"id": 1,
-					"customer": "Johe Doe",
-					"total": 10,
-					"created_at": "2025-08-22T12:34:56Z",
-					"items": {
-						"product_id": 1,
-						"quantity": 2,
-						"product_name": "Pen",
-						"product_price": 5
-					}
-				}
+				"additionalProperties": false
 			},
-			"CreateOrderSuccess": {
-				"type": "object",
+			"SyncSuccess": {
 				"properties": {
 					"message": {
 						"type": "string"
-					},
-					"orderId": {
-						"type": "number"
 					}
 				},
-				"example": {
-					"message": "Order created",
-					"orderId": 1
-				}
-			},
-			"CreateOrder": {
-				"type": "object",
-				"properties": {
-					"customer": {
-						"type": "string"
-					},
-					"total": {
-						"type": "number"
-					},
-					"items": {
-						"type": "array",
-						"product_id": {
-							"type": "number"
-						},
-						"quantity": {
-							"type": "number"
-						},
-						"product_name": {
-							"type": "string"
-						},
-						"product_price": {
-							"type": "number"
-						}
-					}
-				},
-				"example": {
-					"customer": "Johe Doe",
-					"total": 10,
-					"items": {
-						"product_id": 1,
-						"quantity": 2,
-						"product_name": "Pen",
-						"product_price": 5
-					}
-				}
-			},
-			"LoginSuccess": {
-				"type": "object",
-				"properties": {
-					"token": {
-						"type": "string"
-					}
-				},
-				"example": {
-					"token": "$2b$10$bzj9VHtKqTuah3kEqDgC4eEyqv7p0HDHS7L.UEBEZv1889YObizsi"
-				}
-			},
-			"LoginBody": {
-				"type": "object",
-				"properties": {
-					"email": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					}
-				},
-				"example": {
-					"email": "test@example.com",
-					"password": "Password123!"
-				}
-			},
-			"ErrorResponse401": {
-				"type": "object",
-				"properties": {
-					"message": {
-						"type": "string"
-					},
-					"success": {
-						"type": "boolean"
-					},
-					"details": {
-						"type": "array",
-						"items": {
-							"type": "string"
-						}
-					}
-				},
-				"example": {
-					"message": "Invalid credentials",
-					"success": false,
-					"details": []
-				}
-			},
-			"ErrorResponse500": {
-				"type": "object",
-				"properties": {
-					"message": {
-						"type": "string"
-					},
-					"success": {
-						"type": "boolean"
-					},
-					"details": {
-						"type": "array",
-						"items": {
-							"type": "string"
-						}
-					}
-				},
-				"example": {
-					"message": "A server error occurred",
-					"success": false,
-					"details": []
-				}
+				"required": [
+					"message"
+				],
+				"type": "object"
+			}
+		},
+		"securitySchemes": {
+			"bearerAuth": {
+				"type": "http",
+				"scheme": "bearer",
+				"bearerFormat": "JWT"
 			}
 		}
 	},
@@ -586,33 +631,6 @@
 						"bearerAuth": []
 					}
 				],
-				"parameters": []
-			}
-		},
-		"/hello": {
-			"get": {
-				"operationId": "GetHello",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"message": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"message"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
 				"parameters": []
 			}
 		}
